--- a/README
+++ b/README
@@ -23,6 +23,29 @@ OpenBSM currently builds on FreeBSD and Darwin.  With Makefile adjustment
 and minor tweaks, it should build without problems on a broad range of
 POSIX-like systems.
 
+  Building
+
+OpenBSM is currently built using a series of BSD make files which should 
+work on both FreeBSD and Darwin.  One known issue is that versions of 
+Darwin prior to 10.3.8 have a nested include of "sys/audit.h" from 
+"sys/proc.h", which can result in type definition conflicts.  If running 
+with include files from an earlier version of Darwin, the nested include 
+must be manually removed in order that libbsm can be built, due to 
+potentially conflicting types resulting from an include of "sys/sysctl.h" 
+by that file.  On Dariwn, the use of BSD make must be specified explicitly 
+by using "bsdmake" rather than "make", which on Darwin refers to GNU make.  
+Typical invocations from the OpenBSM tree root:
+
+FreeBSD
+
+    % make
+    # make install
+
+Darwin
+
+    % bsdmake
+    # bsdmake install
+
   Credits
 
 The following organizations and individuals have contributed substantially 
