--- a/bin/praudit/praudit.1
+++ b/bin/praudit/praudit.1
@@ -60,8 +60,8 @@ record and event type are displayed.
 This option is exclusive from
 .Fl  r
 .It Fl d Ar del
-Specifies the delimeter.
-The default delimeter is the comma.
+Specifies the delimiter.
+The default delimiter is the comma.
 .El
 .Pp
 If the raw or short forms are not specified, the default is to print the tokens
@@ -69,7 +69,7 @@ in their long form.
 Events are displayed as per their descriptions given in
 .Pa /etc/security/audit_event ;
 uids and gids are expanded to their names;
-dates and times are displayed in human-readible format.
+dates and times are displayed in human-readable format.
 .Sh FILES
 .Bl -tag -width "/etc/security/audit_control" -compact
 .It Pa /etc/security/audit_class
