Man pages need expanding to document contents of returned data structures.
[git-p4: depot-paths = "//depot/projects/trustedbsd/openbsm/": change = 87519]

--- a/TODO
+++ b/TODO
@@ -5,3 +5,4 @@
   type and then compares the results with known good data.  Make sure to
   test that things work properly with respect to endianness of the local
   platform.
+- Document contents of libbsm "public" data structures in libbsm man pages.
