Style and logic fixes:
- White space
- Sort includes
- Use EX_* exit return values
- Staticize globals  
- Fix buffer sizing for strftime()
- Fix command line argument ordering/handling

Submitted by:	Wojciech A. Koszek <dunstan at freebsd dot czest dot pl>

[git-p4: depot-paths = "//depot/projects/trustedbsd/openbsm/": change = 89047]

--- a/README
+++ b/README
@@ -57,6 +57,7 @@ to the development of OpenBSM:
     Robert Watson
     Wayne Salamon
     Tom Rhodes
+    Wojciech Koszek
 
   Contributions
 
@@ -68,5 +69,3 @@ those present on the remainder of the OpenBSM source code.
 
 Information on OpenBSM may be found on the OpenBSM home page:
 
-    http://www.OpenBSM.org/
-    http://www.TrustedBSD.org/
