--- a/libbsm/au_user.3
+++ b/libbsm/au_user.3
@@ -1,5 +1,5 @@
 .\"-
-.\" Copyright (c) 2005 Robert N. M. Watson
+.\" Copyright (c) 2005-2006 Robert N. M. Watson
 .\" All rights reserved.
 .\"
 .\" Redistribution and use in source and binary forms, with or without
@@ -29,11 +29,12 @@
 .Dt AU_USER 3
 .Os
 .Sh NAME
-.Nm free_au_user_ent ,
 .Nm setauuser ,
 .Nm endauuser ,
 .Nm getauuserent ,
+.Nm getauuserent_r ,
 .Nm getauusernam ,
+.Nm getauusernam_r ,
 .Nm au_user_mask ,
 .Nm getfauditflags
 .Nd "Look up information from the audit_user database"
@@ -42,15 +43,17 @@
 .Sh SYNOPSIS
 .In libbsm.h
 .Ft void
-.Fn free_au_user_ent "au_user_ent_t *u"
-.Ft void
 .Fn setauuser "void"
 .Ft void
 .Fn endauuser "void"
-.Ft au_user_ent_t *
+.Ft struct au_user_ent *
 .Fn getauuserent "void"
-.Ft au_user_ent_t *
+.Ft struct au_user_ent *
+.Fn getauuserent_r "struct au_user_ent *u" "void"
+.Ft struct au_user_ent *
 .Fn getauusernam "const char *name"
+.Ft struct au_user_ent *
+.Fn getauusernam_r "struct au_user_ent *u" "const char *name"
 .Ft int
 .Fn au_user_mask "char *username" "au_mask_t *mask_p"
 .Ft int
@@ -67,31 +70,16 @@ events to always audit in
 .Dv au_always ,
 and events never to audit
 .Dv au_never .
-.Vt au_user_ent
-structures allocated by calls to
-.Fn getauuserent
-and
-.Fn getauusernam
-may be freed by calling
-.Fn free_au_user_ent .
 .Pp
 .Fn getauuserent
 return the next user found in the
 .Xr audit_user 5
 database, or the first if the function has not yet been called.
-The returned
-.Vt au_user_ent_t
-may be freed by calling
-.Fn free_au_user_ent .
 .Dv NULL
 will be returned if no further records are available.
 .Pp
 .Fn getauusernam
 looks up a user by name.
-The returned
-.Vt au_user_ent_t
-must be freed by calling
-.Fn free_au_user_ent .
 .Dv NULL
 will be returned if no matching class can be found.
 .Pp
