Credit phk, FlexeLint.
[git-p4: depot-paths = "//depot/projects/trustedbsd/openbsm/": change = 90068]

--- a/README
+++ b/README
@@ -61,9 +61,11 @@ to the development of OpenBSM:
     Tom Rhodes
     Wojciech Koszek
     Chunyang Yuan
+    Poul-Henning Kamp
 
-In addition, Coverity, Inc.'s Prevent(tm) static analysis tool was used to
-identify a number of bugs in the OpenBSM implementation.
+In addition, Coverity, Inc.'s Prevent(tm) static analysis tool and Gimpel
+Software's FlexeLint tool were used to identify a number of bugs in the
+OpenBSM implementation.
 
   Contributions
 
