Add $P4$ to headers of all revision controlled files, except for VERSION.
Slight license formatting changes to some files.

[git-p4: depot-paths = "//depot/projects/trustedbsd/openbsm/": change = 90583]

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -61,4 +61,6 @@ OpenBSM 1.0
   or static memory is returned for non-_r() versions of API calls.
   _free() calls dropped as a result, and source code compatibility with
   OpenSolaris improved significantly.
+- Annotate BSM events with origin OS and compatibility information.
 
+$P4: //depot/projects/trustedbsd/openbsm/CHANGELOG#4 $
