--- a/README
+++ b/README
@@ -77,3 +77,4 @@ those present on the remainder of the OpenBSM source code.
 
 Information on OpenBSM may be found on the OpenBSM home page:
 
+$P4: //depot/projects/trustedbsd/openbsm/README#10 $
