--- a/TODO
+++ b/TODO
@@ -6,3 +6,5 @@
   test that things work properly with respect to endianness of the local
   platform.
 - Document contents of libbsm "public" data structures in libbsm man pages.
+
+$P4: //depot/projects/trustedbsd/openbsm/TODO#3 $
