--- a/bin/praudit/praudit.1
+++ b/bin/praudit/praudit.1
@@ -24,6 +24,8 @@
 .\" IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
+.\" $P4: //depot/projects/trustedbsd/openbsm/bin/praudit/praudit.1#4 $
+.\"
 .Dd Jan 24, 2004
 .Dt PRAUDIT 1
 .Os
