--- a/libbsm/au_free_token.3
+++ b/libbsm/au_free_token.3
@@ -27,7 +27,7 @@
 .\" IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.\" $FreeBSD$
+.\" $P4: //depot/projects/trustedbsd/openbsm/libbsm/au_free_token.3#2 $
 .\"
 .Dd April 19, 2005
 .Dt AU_FREE_TOKEN 3
