--- a/libbsm/au_token.3
+++ b/libbsm/au_token.3
@@ -23,7 +23,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\" $FreeBSD$
+.\" $P4: //depot/projects/trustedbsd/openbsm/libbsm/au_token.3#4 $
 .\"
 .Dd April 19, 2005
 .Dt AU_TOKEN 3
