--- a/libbsm/libbsm.3
+++ b/libbsm/libbsm.3
@@ -23,7 +23,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\" $FreeBSD$
+.\" $P4: //depot/projects/trustedbsd/openbsm/libbsm/libbsm.3#3 $
 .\"
 .Dd April 19, 2005
 .Dt LIBBSM 3
