--- a/man/audit_event.5
+++ b/man/audit_event.5
@@ -1,4 +1,5 @@
-.\" Copyright (c) 2004, Apple Computer, Inc.  All rights reserved.
+.\" Copyright (c) 2004, Apple Computer, Inc.
+.\" All rights reserved.
 .\" 
 .\" Redistribution and use in source and binary forms, with or without
 .\" modification, are permitted provided that the following conditions
@@ -23,6 +24,8 @@
 .\" STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING
 .\" IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
+.\"
+.\" $P4: //depot/projects/trustedbsd/openbsm/man/audit_event.5#3 $
 .\"
 .Dd Jan 24, 2004
 .Dt AUDIT_EVENT 5
