--- a/man/event_code.5
+++ b/man/event_code.5
@@ -23,7 +23,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\" $FreeBSD$
+.\" $P4: //depot/projects/trustedbsd/openbsm/man/event_code.5#2 $
 .\"
 .Dd May 1, 2005
 .Dt EVENT_CODE 5
