--- a/man/setaudit.2
+++ b/man/setaudit.2
@@ -23,7 +23,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\" $FreeBSD$
+.\" $P4: //depot/projects/trustedbsd/openbsm/man/setaudit.2#3 $
 .\"
 .Dd April 19, 2005
 .Dt SETAUDIT 2
