--- a/bin/praudit/praudit.1
+++ b/bin/praudit/praudit.1
@@ -1,4 +1,4 @@
-.\" Copyright (c) 2004, Apple Computer, Inc.
+.\" Copyright (c) 2004 Apple Computer, Inc.
 .\" All rights reserved.
 .\" 
 .\" Redistribution and use in source and binary forms, with or without
@@ -25,7 +25,7 @@
 .\" IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.\" $P4: //depot/projects/trustedbsd/openbsm/bin/praudit/praudit.1#5 $
+.\" $P4: //depot/projects/trustedbsd/openbsm/bin/praudit/praudit.1#6 $
 .\"
 .Dd Jan 24, 2004
 .Dt PRAUDIT 1
