Web site information.
[git-p4: depot-paths = "//depot/projects/trustedbsd/openbsm/": change = 90618]

--- a/README
+++ b/README
@@ -77,4 +77,10 @@ those present on the remainder of the OpenBSM source code.
 
 Information on OpenBSM may be found on the OpenBSM home page:
 
-$P4: //depot/projects/trustedbsd/openbsm/README#10 $
+    http://www.OpenBSM.org/
+
+Information on TrustedBSD may be found on the TrustedBSD home page:
+
+    http://www.TrustedBSD.org/
+
+$P4: //depot/projects/trustedbsd/openbsm/README#11 $
