Reverse integrate TODO#4 from TrustedBSD audit3 to OpenBSM branch. This change was submitted to the wrong branch.
[git-p4: depot-paths = "//depot/projects/trustedbsd/openbsm/": change = 90633]

--- a/TODO
+++ b/TODO
@@ -6,5 +6,7 @@
   test that things work properly with respect to endianness of the local
   platform.
 - Document contents of libbsm "public" data structures in libbsm man pages.
+- The audit.log.5 man page is incomplete, as it does not describe all
+  token types.
 
-$P4: //depot/projects/trustedbsd/openbsm/TODO#3 $
+$P4: //depot/projects/trustedbsd/openbsm/TODO#4 $
