Reverse integrate @90631 and @90632 from TrustedBSD audit3 to TrustedBSD OpenBSM branch after they were submitted to the wrong branch:
OpenBSM information added to auditreduce.1 and praudit.1 man pages.

Man page cleanup:

- Remove event_code.5, it's a good idea, but its time has not yet
  come.
- Use .Fn when naming system calls instead of .Nm, as that's not
  the same thing.
- Remove references to FreeBSD as being the point of appearance of
  some calls, as they actually first appeared in Mac OS X/Solaris.
- Use .Os instead of .Os Mac OS X in man page headers, as these
  man pages will be used on several operating systems.
- Add authors/history information to additional pages.
- Document auditctl() a bit better.
- Document that A_SENDTRIGGER is specific to Mac OS X and FreeBSD.

[git-p4: depot-paths = "//depot/projects/trustedbsd/openbsm/": change = 90634]

--- a/bin/auditreduce/auditreduce.1
+++ b/bin/auditreduce/auditreduce.1
@@ -25,7 +25,7 @@
 .\" IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.\" $P4: //depot/projects/trustedbsd/openbsm/bin/auditreduce/auditreduce.1#5 $
+.\" $P4: //depot/projects/trustedbsd/openbsm/bin/auditreduce/auditreduce.1#6 $
 .\"
 .Dd Jan 24, 2004
 .Dt AUDITREDUCE 1
@@ -139,3 +139,15 @@ events from that log:
 .Xr audit_control 5 ,
 .Xr audit_event 5 ,
 .Xr praudit 1
+.Sh AUTHORS
+This software was created by McAfee Research, the security research division
+of McAfee, Inc., under contract to Apple Computer Inc.
+Additional authors include Wayne Salamon, Robert Watson, and SPARTA Inc.
+.Pp
+The Basic Security Module (BSM) interface to audit records and audit event
+stream format were defined by Sun Microsystems.
+.Sh HISTORY
+The OpenBSM implementation was created by McAfee Research, the security
+division of McAfee Inc., under contract to Apple Computer Inc. in 2004.
+It was subsequently adopted by the TrustedBSD Project as the foundation for
+the OpenBSM distribution.
