--- a/man/audit_class.5
+++ b/man/audit_class.5
@@ -25,11 +25,11 @@
 .\" IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.\" $P4: //depot/projects/trustedbsd/openbsm/man/audit_class.5#4 $
+.\" $P4: //depot/projects/trustedbsd/openbsm/man/audit_class.5#5 $
 .\"
 .Dd Jan 24, 2004
 .Dt AUDIT_CLASS 5
-.Os "Mac OS X"
+.Os
 .Sh NAME
 .Nm audit_class
 .Nd "contains audit event class descriptions"
@@ -56,3 +56,15 @@ Example entries in this file are:
 .Bl -tag -width "/etc/security/audit_class" -compact
 .It Pa /etc/security/audit_class
 .El
+.Sh AUTHORS
+This software was created by McAfee Research, the security research division
+of McAfee, Inc., under contract to Apple Computer Inc.
+Additional authors include Wayne Salamon, Robert Watson, and SPARTA Inc.
+.Pp
+The Basic Security Module (BSM) interface to audit records and audit event
+stream format were defined by Sun Microsystems.
+.Sh HISTORY
+The OpenBSM implementation was created by McAfee Research, the security
+division of McAfee Inc., under contract to Apple Computer Inc. in 2004.
+It was subsequently adopted by the TrustedBSD Project as the foundation for
+the OpenBSM distribution.
