Add OpenBSM man page trailer.
[git-p4: depot-paths = "//depot/projects/trustedbsd/openbsm/": change = 90755]

--- a/bin/auditd/auditd.8
+++ b/bin/auditd/auditd.8
@@ -74,3 +74,15 @@ Default directory for storing audit log files.
 .El
 .Sh SEE ALSO
 .Xr audit 1
+.Sh AUTHORS
+This software was created by McAfee Research, the security research division
+of McAfee, Inc., under contract to Apple Computer Inc.
+Additional authors include Wayne Salamon, Robert Watson, and SPARTA Inc.
+.Pp
+The Basic Security Module (BSM) interface to audit records and audit event
+stream format were defined by Sun Microsystems.
+.Sh HISTORY
+The OpenBSM implementation was created by McAfee Research, the security
+division of McAfee Inc., under contract to Apple Computer Inc. in 2004.
+It was subsequently adopted by the TrustedBSD Project as the foundation for
+the OpenBSM distribution.
